--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -264,17 +264,6 @@ span.light{
   .slide-text{
     color: $dgl-blue;
   }
-  //h5,h6{
-  //  font-family: 'FuturaMedium';
-  //  color: lighten(saturate($dgl-purple, 10%),5%) !important;
-  //  font-weight: 800;
-  //  text-transform: none !important;
-  //}
-  //h1{
-  //  font-family: $font-primary;
-  //  font-size: 50px;
-  //  //text-transform: uppercase;
-  //}
 }
 
 .carousel-caption{
@@ -301,7 +290,6 @@ span.light{
   display: flex;
   flex-direction: column;
   align-items: start;
-  //justify-content: center;
 
 }
 
@@ -312,21 +300,6 @@ body{
   font-family: $font-copy;
   line-height: 1.618;
 
-  //.dgl-ol li {
-  //  counter-increment: list;
-  //  list-style-type: none;
-  //  position: relative;
-  //}
-  //
-  ///* Output the numbers using the counter() function, but use a custom color, and position the numbers how we want */
-  //.dgl-ol li:before {
-  //  color: $dgl-primary;
-  //  content: counter(list) ".";
-  //  left: -32px;
-  //  position: absolute;
-  //  text-align: right;
-  //  width: 26px;
-  //}
   .tag{
     font-family: $font-primary;
     font-weight: 700;
@@ -833,8 +806,42 @@ body{
       }
     }
 
-    button{ //bootstrap override
+    .user-button{
+      //background-color: ;
+      //margin-left: vw;
+      margin-right: 2vw;
+      //display: inline;
+      //padding-left: 5px;
+      //padding-right: 5px;
+      border: 1px solid $dgl-turquiose;
+      a{
+        margin: 5px 5px;
+        font-family: $font-copy;
+        color: $dgl-darktuquise;
+      }
+      &:hover{
+        //border-color: red;
+        background-color: $dgl-darktuquise;
+        a{
+          color: #FFF;
+        }
+      }
+      &:hover:before {
+        background-color: $dgl-turquiose;
+      }
+
+    }
+    .user-button::before{
+      content: ">";
       color: #FFF;
+      background-color: $dgl-darktuquise;
+      //display: inline;
+      //margin: 0;
+      padding: 3.5px 7px;
+    }
+
+    button{ //bootstrap override
+      color: red;
       border-color: $dgl-lightgray !important;
       background-color: $dgl-purple;
       margin-left: 2vw;
