--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -61,6 +61,34 @@ span.light{
   }
 }
 
+.main-banner{
+  background-color: $dgl-darktuquise;
+  .left{
+    max-width: 450px;
+    span{
+      color: white;
+      font-size: 35px;
+      font-weight: bold;
+      font-family: $font-copy;
+    }
+    span.first::before{
+      content: ">";
+      color: #FFF;
+      background-color: $dgl-purple;
+      //display: inline;
+      //margin: 0;
+      padding: 0px .50em 0px .50em ;
+      margin-bottom: 10px;
+      margin-right: .25em;
+      display: inline-block;
+    }
+  }
+  .right{
+    h1{
+      color: $dgl-purple;
+    }
+  }
+}
 
 
 //PAGE SPECIFIC BACKGROUNDS
