--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -150,7 +150,7 @@ $dgl-dark: #272A38;
 }
 
 .bg-lightgray{
-  background-color: $dgl-lightgray;
+  background-color: $dgl-lightgray !important;
 }
 
 .bg-lightergray{
