--- a/public/css/app.css
+++ b/public/css/app.css
@@ -111,7 +111,7 @@
 }
 
 .bg-lightgray {
-  background-color: #f4f4f4;
+  background-color: #f4f4f4 !important;
 }
 
 .bg-lightergray {
@@ -254,7 +254,7 @@ span li {
 }
 
 span p {
-  color: #9EA3AC;
+  color: #002a54;
 }
 
 span table,
@@ -284,6 +284,10 @@ span.light h6 {
 
 .main-banner {
   background-color: #42bfe1;
+  -webkit-box-shadow: 0px 0px 250px 25px #2B303B;
+          box-shadow: 0px 0px 250px 25px #2B303B;
+  position: relative;
+  z-index: 2;
 }
 
 .main-banner .left {
@@ -503,7 +507,7 @@ span.light h6 {
   top: 0;
   left: 0;
   z-index: 3;
-  background: linear-gradient(315deg, #4d3b92, #4d3b92, rgba(20, 8, 5, 0.6), rgba(20, 8, 5, 0.75));
+  background: radial-gradient(circle farthest-side at 65% 10%, rgba(0, 238, 255, 0.75) 0%, rgba(0, 125, 187, 0.75) 70%);
 }
 
 .carousel-item .slide-text {
@@ -994,6 +998,12 @@ body .navbar .dropdown-item:hover {
 body .navbar .nav-item {
   margin-left: 10px;
   margin-right: 10px;
+  padding-bottom: .5rem;
+  padding-top: .5rem;
+}
+
+body .navbar .nav-item:hover {
+  background-color: #42bfe1;
 }
 
 body .nav-brand a {
@@ -1057,7 +1067,7 @@ body .navbar-dgl {
   right: 0;
   left: 0;
   z-index: 1030;
-  border: 1px solid #878787;
+  border-top: 1px solid #878787;
 }
 
 body .navbar-dgl .navbar-brand {
@@ -1089,10 +1099,6 @@ body .navbar-dgl a.nav-link {
   font-family: FuturaMedium, "Lato", "CircularStd", serif;
   border-bottom: 5px solid transparent;
   font-size: .8em;
-}
-
-body .navbar-dgl a.nav-link:hover {
-  color: #ff9457;
 }
 
 body .navbar-dgl .user-button {
@@ -1223,7 +1229,7 @@ body .post-body .post-link {
 }
 
 body .post-body .post-link .post-title {
-  color: #9EA3AC;
+  color: #002a54;
   text-decoration: none;
   margin-top: 5px;
 }
@@ -1232,16 +1238,8 @@ body .post-body-hover:hover {
   cursor: pointer;
 }
 
-body .post-body-hover:hover span p {
-  color: #d7dde8;
-}
-
 body .post-body-hover:hover .time {
   color: #007dbb;
-}
-
-body .post-body-hover:hover .post-title {
-  color: #FFF;
 }
 
 body .footer {
