--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -42,26 +42,46 @@ $dgl-yellow: #FFED78 ;
 //$dgl-lightgray: darken(#BCBDC9, 30%);
 
 //Purples
-$dgl-purple : rgba(77,59,146,1.0);
+$dgl-purple : rgba(61,59,91,1.0);;
+$dgl-purple2 : rgba(55,57,89,1.0);
+$dgl-purple3 : rgba(50,49,80,1.0);
+$dgl-purple4 : rgba(40,40,64,1.0);
+$dgl-purple5 : rgba(30,31,47,1.0);
+
 $dgl-darkpurple: rgba(51,38,98,1.0);
 
 //Turquiose
 $dgl-turquiose : rgba(0,238,255,1.0);
 $dgl-darktuquise : rgba(66,191,225,1.0);
 
-//Blue
-$dgl-blue: rgba(0,125,187,1.0);
 $dgl-darkblue : rgba(0,42,84,1.0);
 //Grays
-$dgl-gray: rgba(135,135,135,1.0);
+$dgl-gray: rgba(158,156,170,1.0);
+$dgl-gray2: rgba(147,143,164,1.0);
+$dgl-gray3: rgba(128,126,140,1.0);
+
 $dgl-lightgray: rgba(244,244,244,1.0);
 
-//Red
-$dgl-red: rgba(255,76,56,1.0);
-//Green
-$dgl-green: rgba(118,204,96,1.0);
+//Reds
+
+$dgl-red: #EE2C54;
+$dgl-red2: #E63125;
+$dgl-red3: #C32926;
+$dgl-red4: #4A2136;
+
+//Greens
+$dgl-green: #3FFECA;
+$dgl-green2: #21A560;
+$dgl-green3: #147C45;
+$dgl-green4: #038660;
+$dgl-green5: #047453;
+
+$dgl-lime: #C2FF1F;
 
 
+//Blues
+$dgl-blue: #4D6CAB;
+$dgl-blue2: #43609C;
 $dgl-darkish-gray: #2F3541;
 $dgl-darkgray: #2B303B;
 $dgl-darkergray: #272C38;
